# agmd

./: .gitignore  AGENTS.local.md  README.md  clean-install.sh  install.sh  pyproject.toml
src/agmd_cli/: __init__.py  add_command.py  cli.py  init_command.py  sync_helpers.py
src/am_cli/: __init__.py  add_command.py  cli.py  init_command.py  module_helpers.py  sync_command.py  sync_helpers.py
