[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "am-cli"
version = "0.1.0"
description = "A scaffolded Python CLI tool."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "AM Maintainers" }
]
dependencies = [
  "PyYAML",
]

[project.scripts]
am = "am_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
